# keyloop

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  README.en.md  README.md  TODO.md  package.json  tsconfig.json
.github/: pull_request_template.md
content/: code_snippets.json  common_words.json  foundation_drills.json  naming.json  number_drills.json  programming_words.json  source_catalog.json  symbols.json  warmup.json  word_chunks.json
contents/: dictionary_mini.json  everyday_articles.json  everyday_english.json  everyday_sentences.json  everyday_word_decomposition.json  foundation_drills.json  language_symbols.json  long_words.json  programming_words.json  source_catalog.json
design/: keyloop-tui-mockup.html
docs/: QUALITY.md  QUALITY.zh.md  RELEASE.md  ROADMAP.en.md  ROADMAP.md  ts-opentui-migration.md
memory/: 2026-06-12-word-loose-translation-wrap.md  2026-06-16-comprehensive-plan-summary-navigation.md
scripts/: extract-from-saved.mjs  extract-local.mjs  extract-ts-functions.mjs  smokeReleaseArchive.ts
src/: cli.rs  cli.ts  content.rs  feedback.rs  index.ts  main.rs  metrics.rs  model.rs  plan.rs  report.rs  storage.rs  trainer.rs
tests/: buildCodeCorpusSnapshotCli.test.ts  buildProgrammingBasics.test.ts  cli.test.ts  cli_commands.rs  codeFormatter.test.ts  codeFormatterAsync.test.ts  content.test.ts  corpusQuality.test.ts  customLibrary.test.ts  customLibraryTargets.test.ts  diagnosis.test.ts  dictionary.test.ts  dictionaryMini.test.ts  feedback.test.ts  goalPlan.test.ts  goalPrompt.test.ts  heatScale.test.ts  keySignal.test.ts  (+31 more)
(+2038 files in other folders)
