[package]
name = "keyloop"
version = "0.1.0"
edition = "2024"
authors = ["luwei"]
description = "KeyLoop is a terminal-based typing trainer for programmers."
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
ignore = "0.4"
rand = "0.8"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
